add latex commands on top of main

--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,4 @@
+% 2> /dev/null; latexmk -pdflatex="pdflatex -synctex=1" -shell-escape  main -pdf ${0%.*} && (xdg-open ${0%.*}.pdf&); exit
 %----------------------------------------------------------------------------------------
 %	PACKAGES AND DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
