Done with INQ design and validation...need to add refs.

--- a/research.tex
+++ b/research.tex
@@ -38,12 +38,12 @@ Note to ourselves:
 \clearpage
 
 \section{Progress and Accomplishments to date} 
-As outlined above, the primary strategic objective of the NPNEQ CMS center during the first 18 months of the funding period was the development of a \textbf{portable}, \textbf{scalable} and \textbf{reliable} DFT/RT-TDDFT platform that is fully compatible with existing petascale and near-term exascale hybrid CPU-GPU architectures. This objective was achieved with the recent release of \textsc{INQ}~\cite{Andrade2021}. In parallel however, the team also pursued multi-institutional collaborative research efforts leading to science outcomes in the area of \textit{ultrafast materials science} using alternate tools and methodologies some of which will be incorporated into the larger INQ ecosystem of codes in future. In the following we provide a summary of both the software development and scientific research efforts within NPNEQ.   
+As outlined above, the primary strategic objective of the NPNEQ CMS center during the first 18 months of the funding period was the development of a \textbf{portable}, \textbf{extensible}, \textbf{scalable} and \textbf{reliable} DFT/RT-TDDFT framework that is fully compatible with existing petascale and near-term exascale \textbf{hybrid CPU-GPU} architectures. This objective was achieved with the recent release of \textsc{INQ}~\cite{Andrade2021}. In parallel however, the team also pursued multi-institutional collaborative research efforts leading to science outcomes in the area of \textit{ultrafast materials science} using alternate tools and methodologies some of which will be incorporated into the larger INQ ecosystem of codes in future. In the following we provide a summary of both the software development and scientific research efforts within NPNEQ.   
 \subsection{Code Development}
 \subsubsection{The INQ DFT/TDDFT platform} 
 With the widespread adoption of Graphical Processing Units (GPUs) as a powerful and energy efficient hardware paradigm for scientific computing over the past fifteen years and with the ongoing migration of DOE's national super-computing facilities from CPU to networked hybrid CPU-GPU architectures, it is of paramount importance within computational materials science that the community has access to electronic structure codes that are fully compatible with the emerging GPU computing landscape. The INQ platform~\cite{Andrade2021} under development by the NPNEQ team addresses this need within the context of Density Functional Theory (DFT) based approaches to materials simulation while further specializing to nonperturbative simulations of materials under nonequilibrum conditions. During the first 18 months of this funding period, the NPNEQ center  accomplished the design and development tasks necessary to deliver a modular and extensible GPU-accelerated software solution for DFT/TDDFT led by LLNL PIs \textbf{Andrade} and \textbf{Correa}. In the following we outline the unique design features of INQ as well as it's current capabilities:
 
-\paragraph{General features and design}
+\paragraph{General features and design:}
 The design philosophy of INQ differs in many important respects from established Fortran/C based DFT/TDDFT codes developed in previous decades to run on CPUs: Unlike the CPU computing model that matured decades ago, GPU computing is still rapidly evolving with different hardware designs  competing for primacy in the super-computing space and vendors making significant low-level updates and modifications on a regular basis. \textsc{INQ} is therefore designed from the outset to be easily modified and improved on top of evolving hardware, while providing consistent results and behavior independent of specific vendor platforms. \textsc{INQ} achieves this goal through abstraction enabled by modern C++ programming, by implementing a clear separation between different classes of software components namely: application (DFT/TDDFT) specific code, infrastructure (basis-set, boundary conditions, data-structures etc) code and low-level numerical library (blas, FFTs etc) code. 
 \newline 
 \newline
@@ -64,53 +64,48 @@ The hardware portability of \textsc{INQ} is achieved in practice through a highl
     \item \textbf{PSEUDOPOD:} \textsc{PSEUDOPOD} is a CPU+GPU compatible library that handles pseudopotential (PP) parsing, filtering and other auxiliary tasks while supporting many popular PP formats as well standardized PP sets such as Pseudodojo and SG15. \textsc{PSEUDOPOD} developed by PI \textbf{Andrade} at LLNL, moves PP handling from the application layer to the library layer of INQ.
     \item \textbf{LIBXC:} Libxc is a standalone library of exchange and correlation (XC) functionals initially developed by M. Marques. As part of the development on \textsc{INQ}, PI \textbf{Andrade} implemented a GPU extension of libxc that relies on cuda ‘unified memory’ to store its internal data structures. \textsc{INQ} therefore has the ability to evaluate XC functionals on GPUs.  
 \end{itemize}
-Figure~\ref{fig:inq_design}(c) shows the interaction between these \textsc{INQ} modules and lower-level vendor provided libraries.  The modularization of \textsc{INQ}'s library layer affords several advantages: For instance, different components can be developed and tested independently as well as shared with other codes, to avoid duplication of work and enable collaborative development. Following changes to low-level vendor provided libraries, only a small portion of the code needs to be updated in a way that is transparent to end users and application layer developers. Furthermore, by creating libraries and offloading tasks to them whenever possible, the code base internal to \textsc{INQ} can be kept relatively small as shown in figure~\ref{fig:inq_design}(b). 
+Figure~\ref{fig:inq_design}(c) shows the interaction between these \textsc{INQ} modules and lower-level vendor provided libraries.  The modularization of \textsc{INQ}'s library layer affords several advantages: For instance, different components can be developed and tested independently as well as shared with other codes, to avoid duplication of work and enable collaborative development. Following changes to low-level hardware-optimized libraries, only a small portion of the code needs to be updated in a way that is transparent to application layer developers. Furthermore, by creating libraries and offloading tasks to them whenever possible, the codebase internal to \textsc{INQ} can be kept relatively small as shown in figure~\ref{fig:inq_design}(b). 
 
-Finally, in order to ensure reliability within a collaborative development environment,  \textsc{INQ} adopts a test-driven development (TDD) approach in line with modern software development best practices. Therefore the \textsc{INQ} codebase consists of both unit and functional tests that are run regularly within an automated continuous delivery platform like gitlab. This ensures that only code modifications that do not lead to errors anywhere in the codebase are accepted.
+Finally, in order to ensure reliability within a collaborative  environment,  \textsc{INQ} adopts a test-driven development (TDD) approach in line with modern software development best practices. Therefore the \textsc{INQ} codebase consists of both unit and functional tests that are run regularly within an automated continuous delivery platform hosted on gitlab. This ensures that only code modifications that do not lead to errors anywhere in the codebase are accepted.
 
-The result is a fully functional yet light-weight DFT/TDDFT code that is portable across hardware platforms, offers optimal scaling on distributed hybrid CPU-GPU platforms and affords reliable numerical accuracy. We discuss performance and validation tests of \textsc{INQ} carried out to date.   
-\paragraph{GPU-MPI functionality and scaling}
+The result is a fully functional yet light-weight DFT/TDDFT framework that is portable across hardware platforms, offers optimal scaling on distributed hybrid CPU-GPU platforms combined with reliable numerical accuracy. \textsc{INQ}'s DFT/TDDFT application layer currently implements semi-local DFT total energies, forces and real-time propagation of the time-dependent KS equations within the adiabatic XC approximations for both molecular and solid-state systems within a periodic supercell framework. In the following we discuss performance and validation tests of these capabilities within \textsc{INQ}. 
+
+\paragraph{GPU-MPI functionality and scaling:}
 1-1.5 pages including figures
-\paragraph{Validation of results}
+\paragraph{Validation of results:}
 \begin{figure}[h]
     \centering
     \includegraphics[width=1.0\linewidth]{figures/Results-Fig.pdf}
     \caption{
-         Comparison between inq and the established electronic structure codes quantum espresso (QE) and octopus.
+         (adapted from ref.~\cite{Andrade2021}. Comparison between \textsc{INQ} and the established electronic structure codes \textsc{quantum espresso} (QE) and \textsc{octopus}.
 Results for ground state total energies and real-time TDDFT optical response are shown. (a) Total energy vs bond length in
 N2 (b) Total energy vs lattice constant in bulk Silicon (c) Time evolution of the dipole moment in gas phase H$_2$O following a
 “kick” perturbation (d) Linear optical absorption of molecular H$_2$O. In all cases there is a high-level of agreement between the
 codes.  
     }
-    \label{fig:inq_design}
+    \label{fig:inq_results}
 \end{figure}
 
-\textbf{1 page including figures}
+For a new scientific code it is fundamental to produce results that are consistent with other approaches and codes. As \textsc{INQ} follows a test-driven development approach, \textsc{INQ}'s codebase is continuously tested and validated at multiple levels against analytical results or benchmark data obtained from other established codes such as Quantum Espresso. We recently carried out higher level end-to-end tests of \textsc{INQ} as a part of the software release validating \textsc{INQ} results against corresponding
+quantities obtained from established plane-wave and realspace grid codes: \textsc{Quantum Espresso} (QE) and \textsc{Octopus}. For this purpose we chose observables such as molecular bond lengths and crystal lattice parameters based on total-energy minimization, as well as linear optical response from real-time propagation as the relevant quantities to be compared. For details on calculation parameters please refer to ref.~\cite{Andrade2021}. As apparent from the comparisons shown in Figure~\ref{fig:inq_results}, we find that absolute total energies from \textsc{INQ} are within 0.3 mHartree/atom of the QE reference. Furthermore, the optical response of a gas phase water molecule as obtained from \textsc{INQ} is seen to be in excellent agreement with the corresponding result from \textsc{Octopus} in the time domain (Fig~\ref{fig:inq_results}(c)) and therefore excitation frequencies in the optical absorption spectrum are also found to match closely across a wide energy range. 
 
-Mention stopping, hook to Future work
+\textbf{Mention stopping, hook to Future work}
 
-\subsubsection{Dynamics of Tight Binding models}\label{sec:tight-binding}
+\subsubsection{Tight Binding model for nonequilibrium dynamics}\label{sec:tight-binding}
+Within NPNEQ, \textit{ab initio} code development efforts lead by the LLNL and SLAC teams are complemented by efforts at LBNL to develop tight-binding models for non-equilibrium dynamics with the recognition that feedback between qualitative models and quantitative simulations is broadly beneficial for knowledge generation within materials science. In particular, careful model building based on first-principles calculations combined with large-scale model simulations is a promising route to produce interesting insights into the dynamic behavior of  materials driven far from equilibrium. We have developed an atomic-orbital-based tight-binding code for simulations on large time and length scales to supplement the capabilities of \textsc{inq}. These models treat
+charge, spin, orbital, and atomic degrees of freedom explicitly, capturing the quantum effects of charge carriers, the non-collinear spin dynamics, and the cooperative lattice vibrations. 
 
-Careful model building based on first-principles calculations combined with large-scale model simulations is a promising route to produce interesting insights into the dynamic behavior of  
-materials driven far from equilibrium. We have developed an atomic-orbital-based
-tight-binding code for simulations on large time and
-length scales to supplement the capabilities of \textsc{inq}. These models treat
-charge, spin, orbital, and atomic degrees of freedom explicitly, capturing the quantum effects of 
-charge carriers, the non-collinear spin dynamics, and the
-cooperative lattice vibrations. 
-
-With the current code, structural and electronic optimization
-can be performed to study the ground state properties. 
-For simulating the relaxation dynamics of excited solids, 
+With the current tight-binding code, structural and electronic optimization
+can be performed to study ground state properties. 
+For simulating relaxation dynamics of excited solids, 
 the code supports Ehrenfest dynamics and Car-Parrinello dynamics. 
 The effect of linearly polarized light field is implemented 
-via Peierls substitution method. Our recently published work
+via the Peierls substitution method. Our recently published work
 on manganites~\cite{Sangeeta2020a} demonstrates the potential of such tight-binding
 models to study non-equilibrium dynamics in functional quantum materials. 
 
 During the project period, the code has been extended to simulate multilayer
-oxide structures, layered transition metal dichalcogenides (TMDC), and circularly polarized excitations. 
-Work is in progress to implement further extensions such as spin-orbit couplings,  van der Waals (vdW) interactions, and Nose-Hover thermostat to incorporate finite-temperature effects. Additionally, the inclusion of external magnetic fields will allow for the simulation of magnetic
+oxide structures, layered transition metal dichalcogenides (TMDC), and circularly polarized excitations. This has led to multiple scientific outputs and insights both through intra-NPNEQ ~\textcolor{red}{~\textbf{PROVIDE CITATION}} and external collaborations~\textcolor{red}{~\textbf{PROVIDE CITATION}} as outlined in the next subsection. Work is in progress to implement further extensions such as spin-orbit couplings,  van der Waals (vdW) interactions, and Nose-Hover thermostat to incorporate finite-temperature effects. Additionally, the inclusion of external magnetic fields will allow for the simulation of magnetic
 excitations and magnon dispersion. Solving for these spin-waves will be done in large unit cells using
 an effective spin Hamiltonian consisting of Zeeman effects, exchange interactions and magnetic
 anisotropies. 
@@ -194,7 +189,27 @@ We develop computational models of the ultrafast photoinduced dynamics in TaTe$_
 \subsection{Code developments}
 \subsubsection{Functionality additions to INQ}
 \paragraph{Exact exchange and Axc}
+
+Nonlocal functionals for Generalized Kohn-Sham (GKS) RT-TDDFT (Task 1.1)
+% The need for more accurate descriptions of the electron density and its polarization response to perturbations across length scales is critical for real-time explorations of ultrafast dynamics. Field-driven excitations relevant to optical transitions require accurate band gaps and excited state evolution113, 116, 118. The potential to form self-trapped excited states, through electron-nuclear interactions, such as exciton-polaritons, places stringent accuracy requirements on exactly those areas where traditional (semi-)local exchange-correlation functionals fail due to significant self-interaction errors that limit or prevent electronic localization and the associated symmetry-breaking forces on local regions of the ionic lattice/nuclear coordinates112, 116, 144. 
+% Nonlocal functionals featuring a fraction of Fock exchange provide one solution to this problem, generally reducing self-interaction, increasing bandwidth in the electronic DOS and reducing polarizabilities to values closer to experimental estimates118, 119. However, evaluation of the Fock operator within the exact-exchange formalism presents significant computational overhead for static calculations and can render time-dependent studies intractable. Such calculations, within a plane-wave basis (as proposed in this effort) present costs that scale as Ng log(Ng) Ne2, where Ng, the number of plane-wave basis functions can easily approach millions for large system sizes, even if the number of electrons, Ne, is only in the thousands. In partnership with NERSC, PI Prendergast recently succeeded in providing order of magnitude speed-up within the hybrid exact-exchange implementation for the open-source code, PWscf (part of the QuantumESPRESSO suite145) through (1) reorganization of the data layout when switching between the external local DFT self-consistent field loop and an internal non-local Fock matrix evaluation loop and (2) parallelization of the Fock matrix evaluation via band pairing146. These changes have been implemented within PWscf since version 6.1 of QuantumESPRESSO and recent applications include studies of transition metal oxides: variations in electronic DOS upon lithiation147 and significant improvements in transition state energetics for lithium ion transport148. 
+% Furthermore, for large scale plane-wave applications, we will require convergent approximations to the Fock operator with further reductions in computational overhead, such as the Adaptively Compressed Exchange (ACE) approach of Lin149. In this development, the full exchange operator is replaced with a lower rank (Ne vs. Ng) approximant with convergence constraints. This has also been implemented with QuantumESPRESSO (since version 6.1) and another plane-wave implementation in the Discontinuous Galerkin DFT code (DGDFT150) and has been applied in benchmark studies of bulk silicon supercells and to the study of water adsorption on silicene151. ACE contrasts with previous efforts to exploit the locality of exchange interactions through transformations of the occupied Kohn-Sham orbital subspace to a basis of localized functions, such as maximally-localized Wannier functions (as developed by Car et al. 152 in the CP code within QuantumESPRESSO) or via recursive subspace bisection (as developed by Gygi et al. 153 in the Qbox code).
+% The ACE approach for hybrid exact-exchange, combined with the parallel-transport (PT) gauge discussed previously represents a promising avenue (PT-ACE) towards efficient plane-wave basis set RT-TDDFT simulations133 within the Generalized Kohn-Sham (GKS) scheme. It is noted however by Jia et al133, that 1024 silicon atoms, running for ~30 fs employing PT-ACE still requires 1 week to compute on 2048 cores of Edison (at NERSC), although without PT-ACE, it might take a year to do the same. Therefore, there is clearly work still to be done to both improve the strong scaling of plane-wave implementations of hybrid exact-exchange within RT-TDDFT, by adapting promising algorithms like PT-ACE for scalable GPU-based architectures such as within Qbox. To this end, the simplifications and algorithmic improvements outlined above highlight potential opportunities to offload significant computational work while leveraging hardware specific implementations of standard matrix-multiply and fast Fourier transform routines. 
+% (Task 1.1) In view of the above, the NPNEQ team will develop GKS RT-TDDFT functionality featuring range-separated hybrid XC functionals by leveraging  algorithms such as PT-ACE within the scalable Qbox framework.  
+
+
 \paragraph{Non-collinear magnetism and spin-orbit}
+Spin-orbit coupling for dynamics (Task 1.3)
+ 
+% In time-independent problems the description of spin-orbit coupling is necessary to reproduce accurate atomic energies and level splitting. In thermal equilibrium the spin state and the existence of magnetism is determined by free energy minimization. In time-dependent problems the situation is more complicated, since the only way to change the spin state is by an external magnetic field or internally by spin-orbit coupling. Processes like ultrafast demagnetization can be phenomenologically explained by models that assume kinetics upon free energy models 162 but a practical microscopic model is still absent.
+% Specifically, we will implement spin-orbit coupling (SOC) dynamics, which will significantly improve fidelity of quantum dynamics simulations of functional materials that often comprise transition metals and exhibit complex magnetism. Our implementation of SOC for the planewave basis will not use the projection approximation that virtually all the currently existing (TD)DFT software relies on; as it has been shown to be inappropriate for a description of time dependent quantum mechanical evolution 163.
+% The ubiquitous projection approximation allows to use a natural representation of the spin-orbit interaction by an additive term of the type  with prefactors calculated at the atomic (pseudopotential) level (   is a local projection of the electronic orbital angular momentum). The definition of  depends on ionic positions, which are varying dynamically along with the simulation. Effectively this defines a representation in a curved and changing Hilbert space that is very complex to code163 .
+% Although this picture of SO coupling it is usually justified by the dominance of localized orbitals, in the non-adiabatic context, the simplifications of the projection method carry a heavy complexity cost. Additionally, a time-dependent theory of magnetism is necessarily non-colinear, in order to continuously connect different spin configurations.
+% Time-dependency, non-colinear magnetism and dynamical ions (coupled to both electron-orbital and spin) call for a new approach to the problem of spin in first-principles simulations. Our alternative strategy starts from the the Breit-Pauli Hamiltonian in the two component spinor algebra 164. The Breit-Pauli terms incorporate scalar relativistic corrections to the non-relativistic Hamiltonian, and contain spin-explicit terms describing the interaction between the orbital magnetic moments and spin magnetic moments:
+
+% where  is the gradient (force) of the nuclear potential. This part of the Hamiltonian contains two-body terms that are unacceptable in the Kohn-Sham theory, therefore we will use the gradient of self-consistent effective potential as presented by Krieger et al.
+% This representation of the SO is independent on the labeling of ions and not-explicitly dependent on the ion positions (only through the potential); it doesn’t rely on a local projection of the angular momentum and it is more suitable for a time dependent treatment with co-evolving ions. In the same way that a quantum ion-electron interaction leads to advanced picture of electron-phonon coupling (a two-temperature system),128 this development will lead to a fuller picture to guide advances of effective models of spin-lattice-electron dynamics166. This is important, in particular, to handle time evolution of Weyl points driven by lattice motion or circularly polarized light, addressing the needs for modeling experimental efforts described in other sections. 
+
 \paragraph{Spiral boundary conditions}
 
 \paragraph{Beyond Ehrenfest dynamics} 
